GH-47 fix(starbucks-career): update assets. set max width on the board game image + align center

--- a/src/css/pages/case-study-sb-career.scss
+++ b/src/css/pages/case-study-sb-career.scss
@@ -32,6 +32,7 @@
 
 .hero {
   position: relative;
+  z-index: 2;
 
   img {
     width: 100%;
@@ -88,8 +89,13 @@
 }
 
 .board-games {
+  background-color: #d9d2c4;
+  text-align: center;
+
   &__image {
     width: 100%;
+
+    max-width: rem(1440);
   }
 }
 
